@@ -31,6 +31,8 @@
  * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
  * POSSIBILITY OF SUCH DAMAGE.
  */
+#include <libmemory/smr.h>
+#include <libmemory/hptr.h>
 #include "test.h"
 #include "../stack.h"
 
@@ -57,8 +59,16 @@ void stack_test(void)
 
 int main(void)
 {
+	smr_init(LIBCONTAIN_MIN_HPTRS);
+	hptr_init();
+	smr_thread_init();
+	
 	stack_test();
 	
+	smr_thread_fini();
+	hptr_fini();
+	smr_fini();
+
 	return 0;
 }
 
